--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- coding by helpme_coder -->
+    <!-- credits to the writter @myraopheliaiman-->
 
 <head>
     <meta charset="UTF-8">
